--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^4.1.0"
+  },
+  "dependencies": {
+    "knockout": "^3.5.1"
   }
 }
